--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -28,8 +28,8 @@
 
 // Palette.
 	$palette: (
-		bg:					#935d8c,
-		fg:					rgba(255,255,255,0.65),
+		bg:					#74b874,
+		fg:					rgba(255, 255, 255, 0.815),
 		fg-bold:			#ffffff,
 		fg-light:			rgba(255,255,255,0.5),
 		border:				rgba(255,255,255,0.35),
@@ -44,17 +44,17 @@
 			fg-bold:		#636363,
 			fg-light:		rgba(99,99,99,0.25),
 			border:			#dddddd,
-			border-bg:		rgba(222,222,222,0.25),
+			border-bg:		rgba(21, 255, 0, 0.25),
 			border2:		#dddddd,
 			border2-bg:		rgba(222,222,222,0.5),
 		),
 
-		accent:				#8cc9f0,
-		accent1:			#efa8b0,
-		accent2:			#c79cc8,
-		accent3:			#a89cc8,
-		accent4:			#9bb2e1,
-		accent5:			#8cc9f0,
-		bg1:				#e37682,
-		bg2:				#5f4d93
+		accent:				#0a7700,
+		accent1:			#efeea8,
+		accent2:			#a3c89c,
+		accent3:			#9dc89c,
+		accent4:			#9bcde1,
+		accent5:			#2cbd1f,
+		bg1:				#8b8a34,
+		bg2:				#4d9370
 	);
