--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -44,7 +44,8 @@
 			width: 100%;
 
 			img {
-				width: 100%;
+				width: 30%;
+				margin: 0 auto;
 			}
 		}
 
@@ -55,6 +56,7 @@
 
 			img {
 				width: 100%;
+				margin: 0 auto;
 			}
 		}
 	}
