added staff/programs pages

--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -99,4 +99,32 @@
 				padding-top: 0;
 			}
 		}
+		
+		.dropdown {
+			position: relative;
+			display: inline-block;
+		}
+		
+		.dropdown-content {
+			display: none;
+			position: absolute;
+			background-color: #f1f1f1;
+			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+			border-radius: 5px;
+			z-index: 1;
+		}
+		
+		.dropdown-content a {
+			padding: auto 16px;
+			text-decoration: none;
+			height: auto;
+			line-height: 1em;
+			margin: 0.5em 0;
+			padding: 0.5em 0;
+			display: block;
+		}
+		
+		.dropdown:hover .dropdown-content {
+			display: block;
+		}
 	}
