--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -69,3 +69,6 @@
 	@import 'layout/main';
 	@import 'layout/footer';
 	@import 'layout/wrapper';
+	@import 'layout/sidebar';
+	@import 'layout/nav-mobile';
+	@import 'layout/backdrop';
