--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -55,13 +55,9 @@
 					box-shadow: inset 0 0 0 1px transparent;
 
 					&:hover {
-						background-color: _palette(invert, border-bg);
+						background-color: _palette(bg);
+						color: #ffffff;
 					}
-
-					// &.active {
-					// 	background-color: _palette(invert, bg);
-					// 	box-shadow: none;
-					// }
 				}
 			}
 		}
@@ -116,6 +112,7 @@
 			margin: 0.5em 0;
 			padding: 0.5em 0;
 			display: block;
+			border-radius: 0;
 		}
 		
 		.dropdown:hover .dropdown-content {
@@ -125,7 +122,6 @@
 		.is-active {
 			background-color: _palette(bg);
 			color: #ffffff;
-			border: 1px solid _palette(bg);
 			border-radius: 5px;
 			box-shadow: none;
 		}
