--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -49,12 +49,12 @@
 			border2-bg:		rgba(222,222,222,0.5),
 		),
 
-		accent:				#0a7700,
+		accent:				#469246,
 		accent1:			#efeea8,
 		accent2:			#a3c89c,
 		accent3:			#9dc89c,
 		accent4:			#9bcde1,
-		accent5:			#2cbd1f,
+		accent5:			#1a7012,
 		bg1:				#8b8a34,
 		bg2:				#4d9370
 	);
