--- a/src/assets/scss/layout/_backdrop.scss
+++ b/src/assets/scss/layout/_backdrop.scss
@@ -19,6 +19,6 @@
         right: 0;
         height: 100vh;
         width: 30vw;
-        z-index: _misc(calc(z-index-base + 10));
+        z-index: _misc(z-index-base);
     }
 }
