--- a/src/assets/scss/layout/_sidebar.scss
+++ b/src/assets/scss/layout/_sidebar.scss
@@ -48,8 +48,6 @@
                     'margin #{_duration(transition)} ease'
                 ));
                 display: block;
-                margin: 0 0.35em;
-                padding: 0 0.5em;
 
                 a {
                     @include vendor('transition', (
@@ -58,7 +56,7 @@
                     display: inline-block;
                     height: 2.25em;
                     line-height: 2.25em;
-                    padding: 0 1.25em;
+                    padding: 0 1.25em 0 0.75em;
                     border: 0;
                     border-radius: _size(border-radius);
                     box-shadow: inset 0 0 0 1px transparent;
@@ -86,9 +84,8 @@
             height: auto;
             line-height: 1.5em;
             margin: 0.5em 0;
-            padding: 0.5em 0;
+            padding: 0 1.25em 0 0.75em;
             display: block;
-            text-align: center;
         }
         
         .dropdown:hover .dropdown-content {
@@ -101,6 +98,15 @@
             border: 1px solid _palette(bg);
             border-radius: 5px;
             box-shadow: none;
+        }
+
+        .down-arrow {
+            display: inline-block;
+            color: _palette(bg);
+            font-weight: bold;
+            font-size: 0.8em;
+            transform: scaleX(1.25);
+            padding-left: 10px;
         }
 
         @include breakpoint(small) {
